samples/_failures_safe/1760888303_fe9af3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebe9bd9c.c: In function ‘main’:
./samples/SAFE/__tmp_ebe9bd9c.c:121:5: error: expected declaration or statement at end of input
  121 |     }
      |     ^
